fix: ensure site is not breaking on smaller screen

--- a/style.css
+++ b/style.css
@@ -10,6 +10,8 @@ html {
 	margin: 0;
 	padding: 0;
 	box-sizing: inherit;
+
+	overflow-x: hidden;
 }
 
 :root {
@@ -24,6 +26,7 @@ body {
 	font-size: 20px;
 	font-weight: 400;
 	line-height: 30px;
+	overflow-x: hidden;
 }
 
 a {
@@ -46,6 +49,7 @@ header {
 
 nav {
 	display: flex;
+	flex-wrap: wrap;
 	justify-content: space-between;
 	align-items: center;
 	gap: 30px;
@@ -63,12 +67,14 @@ nav {
 
 .nav-right {
 	display: flex;
+	flex-wrap: wrap;
 	align-items: center;
 	gap: 110px;
 }
 
 .nav-links {
 	display: flex;
+	flex-wrap: wrap;
 	gap: 34px;
 	color: #ffffff;
 }
@@ -79,6 +85,7 @@ nav {
 
 .nav-icons {
 	display: flex;
+	flex-wrap: wrap;
 	gap: 5px;
 	justify-content: space-between;
 }
@@ -92,9 +99,10 @@ main {
 .hero-container {
 	background-color: var(--background-green);
 	padding: 0 99px;
-	height: 574px;
+	min-height: 574px;
 
 	display: flex;
+	flex-wrap: wrap;
 	justify-content: space-between;
 	align-items: center;
 }
@@ -107,6 +115,7 @@ main {
 	line-height: 75.41px;
 
 	text-shadow: 0 4px 4px #00000040;
+	max-width: 500px;
 }
 
 .button {
@@ -128,6 +137,7 @@ main {
 
 .hero-content {
 	display: flex;
+	flex-wrap: wrap;
 	flex-direction: column;
 	justify-content: space-between;
 	gap: 73px;
@@ -150,6 +160,10 @@ main {
 	z-index: 0;
 }
 
+.hero-img {
+	max-width: 100%;
+}
+
 /* typography */
 
 .large-heading-font {
@@ -160,6 +174,7 @@ main {
 	text-align: left;
 	text-underline-position: from-font;
 	text-decoration-skip-ink: none;
+	overflow: hidden;
 }
 
 .short-heading-font {
@@ -174,7 +189,7 @@ main {
 }
 
 .product-details-font {
-	font-family: Inter;
+	font-family: "Inter", serif;
 	font-size: 14px;
 	font-weight: 400;
 	line-height: 22px;
@@ -188,6 +203,7 @@ main {
 
 .explore-product-container {
 	display: flex;
+	flex-wrap: wrap;
 	padding: 99px;
 	gap: 120px;
 }
@@ -202,6 +218,10 @@ main {
 	text-decoration-skip-ink: none;
 }
 
+.eplore-details {
+	max-width: 200px;
+}
+
 .explore-explore {
 	background-color: var(--background-green);
 	color: #ffffff;
@@ -210,19 +230,23 @@ main {
 
 .explore-cards {
 	display: flex;
+	flex-wrap: wrap;
+	overflow: visible;
 	gap: 42px;
 }
 
 .explore-card {
 	background-color: #35736e1a;
+	overflow: visible;
 	position: relative;
 
 	width: 296px;
 	padding: 46px;
-	height: 288.86px;
+	min-height: 288.86px;
 	border-radius: 20px;
 
 	display: flex;
+	flex-wrap: wrap;
 	flex-direction: column;
 	justify-content: flex-end;
 	align-items: center;
@@ -262,6 +286,7 @@ main {
 	padding: 99px;
 
 	display: flex;
+	flex-wrap: wrap;
 }
 
 .choose-content,
@@ -271,6 +296,7 @@ main {
 
 .choose-content {
 	display: flex;
+	flex-wrap: wrap;
 	flex-direction: column;
 	gap: 20px;
 }
@@ -306,6 +332,7 @@ main {
 .choose-right {
 	position: relative;
 	display: flex;
+	flex-wrap: wrap;
 	justify-content: center;
 }
 
@@ -319,6 +346,7 @@ main {
 .modern-design-container {
 	padding: 99px;
 	display: flex;
+	flex-wrap: wrap;
 	gap: 16px;
 }
 
@@ -329,11 +357,14 @@ main {
 .modern-images {
 	flex: 3 1 0;
 	display: flex;
+	flex-wrap: wrap;
 	justify-content: center;
 	align-items: flex-start;
 	gap: 12px;
 
 	position: relative;
+
+	overflow: hidden;
 }
 
 .top {
@@ -349,6 +380,7 @@ main {
 	flex: 2 1 0;
 
 	display: flex;
+	flex-wrap: wrap;
 	flex-direction: column;
 	gap: 24px;
 }
@@ -372,6 +404,7 @@ main {
 .testimonial-section {
 	padding: 99px;
 	display: flex;
+	flex-wrap: wrap;
 	flex-direction: column;
 	align-items: center;
 	gap: 36px;
@@ -379,6 +412,7 @@ main {
 
 .testimonial-container {
 	display: flex;
+	flex-wrap: wrap;
 	justify-content: space-around;
 	align-items: center;
 	gap: 100px;
@@ -386,18 +420,19 @@ main {
 
 .ttm-arrow {
 	width: 58px;
-	height: 58px;
+	min-height: 58px;
 	border-radius: 50%;
 	background-color: #e2e4e3;
 	display: flex;
+	flex-wrap: wrap;
 	justify-content: center;
 	align-items: center;
 }
 
 .testimonial-container p {
-	width: 800px;
+	max-width: 800px;
 
-	font-family: Inter;
+	font-family: "Inter", serif;
 	font-size: 18px;
 	font-weight: 400;
 	line-height: 32px;
@@ -408,6 +443,7 @@ main {
 
 .ttm-user {
 	display: flex;
+	flex-wrap: wrap;
 	flex-direction: column;
 	align-items: center;
 	gap: 4px;
@@ -423,6 +459,7 @@ main {
 
 .recent-blog {
 	display: flex;
+	flex-wrap: wrap;
 	flex-direction: column;
 	gap: 86px;
 
@@ -431,6 +468,7 @@ main {
 
 .blog-heading {
 	display: flex;
+	flex-wrap: wrap;
 	justify-content: space-between;
 	align-items: center;
 }
@@ -438,7 +476,7 @@ main {
 .view-post {
 	font-family: "Inter", serif;
 	font-size: 16px;
-	height: 30px;
+	min-height: 30px;
 	font-weight: 600;
 }
 
@@ -448,11 +486,13 @@ main {
 
 .blogs {
 	display: flex;
+	flex-wrap: wrap;
 	justify-content: space-between;
 }
 
 .blog {
 	display: flex;
+	flex-wrap: wrap;
 	flex-direction: column;
 	align-items: flex-start;
 	gap: 24px;
@@ -463,7 +503,7 @@ main {
 }
 
 .blog-desc-head {
-	font-family: Inter;
+	font-family: "Inter", serif;
 	font-size: 18px;
 	font-weight: 600;
 	line-height: 21.78px;
@@ -473,7 +513,7 @@ main {
 }
 
 .italics {
-	font-family: Inter;
+	font-family: "Inter", serif;
 	font-size: 14px;
 	font-style: italic;
 	font-weight: 400;
@@ -484,7 +524,7 @@ main {
 }
 
 .blog-owner {
-	font-family: Inter;
+	font-family: "Inter", serif;
 	font-size: 14px;
 	font-weight: 600;
 	line-height: 16.94px;
@@ -500,6 +540,7 @@ footer {
 
 .newsletter-section {
 	display: flex;
+	flex-wrap: wrap;
 }
 
 .newsletter-container,
@@ -509,6 +550,7 @@ footer {
 
 .subscribe {
 	display: flex;
+	flex-wrap: wrap;
 	align-items: flex-end;
 	gap: 8px;
 	margin-bottom: 24px;
@@ -524,7 +566,7 @@ input {
 	border: 1px solid #c4c4c4;
 
 	width: 262px;
-	height: 45.79px;
+	min-height: 45.79px;
 }
 
 ::placeholder {
@@ -533,6 +575,7 @@ input {
 
 .newsletter-container form {
 	display: flex;
+	flex-wrap: wrap;
 	gap: 16px;
 	align-items: flex-end;
 }
@@ -540,8 +583,9 @@ input {
 .send-button {
 	background-color: var(--background-green);
 	width: 50px;
-	height: 47.7px;
+	min-height: 47.7px;
 	display: flex;
+	flex-wrap: wrap;
 	justify-content: center;
 	align-items: center;
 
@@ -555,7 +599,7 @@ input {
 .sofa-footer {
 	position: absolute;
 	left: 136px;
-	top: -228px;
+	top: -111px;
 }
 
 /* footer links */
@@ -569,6 +613,7 @@ input {
 
 .grid-desc {
 	display: flex;
+	flex-wrap: wrap;
 	gap: 60px;
 	margin-bottom: 16px;
 }
@@ -586,6 +631,7 @@ input {
 /* footer socials */
 .social-links {
 	display: flex;
+	flex-wrap: wrap;
 	gap: 8px;
 
 	margin-bottom: 40px;
@@ -593,9 +639,10 @@ input {
 
 .link-img-container {
 	width: 41px;
-	height: 41px;
+	min-height: 41px;
 
 	display: flex;
+	flex-wrap: wrap;
 	justify-content: center;
 	align-items: center;
 
@@ -610,12 +657,14 @@ input {
 .terms-policy {
 	padding: 40px 150px;
 	display: flex;
+	flex-wrap: wrap;
 	justify-content: flex-end;
 	gap: 32px;
 }
 
 .copyright {
 	display: flex;
+	flex-wrap: wrap;
 	align-items: center;
 	justify-content: center;
 	padding: 50px 30px 0px;
@@ -626,4 +675,8 @@ input {
 .figma {
 	text-decoration: underline;
 	color: blue;
+}
+
+.sofa-container img, .sofa-container, .newsletter-container, .newsletter-section {
+	overflow: visible;
 }
